--- a/assets/images/desktop.ini
+++ b/assets/images/desktop.ini
@@ -1,2 +1,6 @@
 [LocalizedFileNames]
 螢幕擷取畫面 2025-09-03 104512.png=@螢幕擷取畫面 2025-09-03 104512.png,0
+螢幕擷取畫面 2025-09-05 011944.png=@螢幕擷取畫面 2025-09-05 011944.png,0
+螢幕擷取畫面 2025-09-05 011939.png=@螢幕擷取畫面 2025-09-05 011939.png,0
+螢幕擷取畫面 2025-09-05 011932.png=@螢幕擷取畫面 2025-09-05 011932.png,0
+螢幕擷取畫面 2025-09-05 010815.png=@螢幕擷取畫面 2025-09-05 010815.png,0
